<resources>
    <string name="app_name">AriaMap</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="history_menu">历史上的今天</string>

    <string name="subway_menu">地铁路线图</string>
    <string name="weather">天气</string>
    <string name="bus_search_menu">公交线路查询</string>
    <string name="step_menu">计步器</string>
    <string name="setting">设置</string>
    <string name="input_end">输入目标位置</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="near">周边</string>
    <string name="route_nav">导航</string>
    <string name="route">路线</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="cancel_success">注销成功</string>
    <string name="cancel_fail">注销失败</string>
    <string name="account_empty">用户名不可为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="walk">步行</string>
    <string name="bus">公交</string>
    <string name="drive">驾车</string>
    <string name="search">搜索</string>
    <string name="voice_input">语音输入</string>
    <string name="food">美食</string>
    <string name="play">休闲娱乐</string>
    <string name="supermarket">超市</string>
    <string name="hotel">酒店</string>
    <string name="sign_up">注册</string>
    <string name="hospital">医院</string>
    <string name="face_login">人脸登录</string>
    <string name="scenic">景点</string>
    <string name="nick_name">昵 称</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>
    <string name="face_model_delete">人脸模型删除</string>
</resources>
